--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -15,20 +15,29 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
 
-      - name: Set up Node.js
-        uses: actions/setup-node@v2
+      - name: Set up Python
+        uses: actions/setup-python@v2
         with:
-          node-version: '14'
+          python-version: '3.x'
 
       - name: Install dependencies
-        run: npm install
+        run: |
+          python -m venv venv
+          source venv/bin/activate
+          pip install -r requirements.txt
 
       - name: Run tests
-        run: npm test
+        run: |
+          source venv/bin/activate
+          python -m unittest discover
 
       - name: Deploy to MCP Server
         run: |
-          # Add commands to deploy to MCP Server
+          source venv/bin/activate
+          python deploy_to_mcp.py
+        env:
+          MCP_API_URL: ${{ secrets.MCP_API_URL }}
+          MCP_API_KEY: ${{ secrets.MCP_API_KEY }}
 
       - name: Integrate with Airtable
         run: |
