--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -30,7 +30,7 @@ jobs:
       - name: Run tests
         run: |
           source venv/bin/activate
-          python -m unittest discover
+          python -m unittest discover -s tests
 
       - name: Deploy to MCP Server
         run: |
