--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,8 @@
-requests>=2.31.0
-python-dotenv>=1.0.0
+flask==3.0.2
+gunicorn==21.2.0
+python-dotenv==1.0.1
+requests==2.31.0
+# MCP SDK requirements will be added here
 pytest>=7.4.0
 pytest-mock>=3.11.0
 requests-mock>=1.12.1 
