--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -7,52 +7,21 @@ on:
     branches: [ main ]
 
 jobs:
-  verify-and-deploy:
+  basic-check:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
 
+      - name: List repository contents
+        run: ls -la
+
       - name: Setup Node.js
         uses: actions/setup-node@v3
         with:
           node-version: '16'
-          cache: 'npm'
 
-      - name: Install dependencies
-        run: npm ci
-
-      - name: Verify package.json
+      - name: Verify Node.js installation
         run: |
-          if [ -f "package.json" ]; then
-            echo "package.json exists"
-            cat package.json
-          else
-            echo "package.json not found"
-            exit 1
-          fi
-
-      - name: Deploy to Render
-        if: github.ref == 'refs/heads/main' && success()
-        env:
-          RENDER_API_KEY: ${{ secrets.RENDER_API_KEY }}
-          RENDER_SERVICE_ID: ${{ secrets.RENDER_SERVICE_ID }}
-        run: |
-          echo "Triggering deployment on Render..."
-          DEPLOY_RESPONSE=$(curl -s -w "\n%{http_code}" -X POST \
-            "https://api.render.com/v1/services/$RENDER_SERVICE_ID/deploys" \
-            -H "accept: application/json" \
-            -H "authorization: Bearer $RENDER_API_KEY")
-          
-          HTTP_STATUS=$(echo "$DEPLOY_RESPONSE" | tail -n1)
-          RESPONSE_BODY=$(echo "$DEPLOY_RESPONSE" | sed '$d')
-          
-          if [ "$HTTP_STATUS" -eq 200 ]; then
-            echo "Deployment triggered successfully!"
-            echo "Response: $RESPONSE_BODY"
-          else
-            echo "Failed to trigger deployment"
-            echo "Status code: $HTTP_STATUS"
-            echo "Response: $RESPONSE_BODY"
-            exit 1
-          fi
+          node --version
+          npm --version
