--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,22 +1,16 @@
 {
   "env": {
     "node": true,
-    "es2022": true,
+    "es2021": true,
     "jest": true
   },
-  "extends": [
-    "eslint:recommended",
-    "plugin:jest/recommended",
-    "prettier"
-  ],
-  "plugins": ["jest"],
+  "extends": "airbnb-base",
   "parserOptions": {
-    "ecmaVersion": "latest",
-    "sourceType": "module"
+    "ecmaVersion": "latest"
   },
   "rules": {
-    "no-console": "warn",
-    "no-unused-vars": ["error", { "argsIgnorePattern": "^_" }],
-    "prettier/prettier": "error"
+    "no-console": "off",
+    "consistent-return": "warn",
+    "no-unused-vars": ["error", { "argsIgnorePattern": "next" }]
   }
 } 
