--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -59,3 +59,18 @@ jobs:
       - name: Run tests
         if: success()
         run: npm test || echo "Tests skipped - no tests found"
+
+      - name: Deploy to Render
+        if: github.ref == 'refs/heads/main' && success()
+        env:
+          RENDER_API_KEY: ${{ secrets.RENDER_API_KEY }}
+          RENDER_SERVICE_ID: ${{ secrets.RENDER_SERVICE_ID }}
+        run: |
+          echo "Deploying to Render..."
+          curl -X POST \
+            "https://api.render.com/v1/services/$RENDER_SERVICE_ID/deploys" \
+            -H "Authorization: Bearer $RENDER_API_KEY" \
+            -H "Content-Type: application/json"
+          
+          # Check deployment status
+          echo "Deployment triggered. Check Render dashboard for status."
