--- a/.github/workflows/python-mcp.yml
+++ b/.github/workflows/python-mcp.yml
@@ -17,6 +17,9 @@ on:
 jobs:
   mcp-check:
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: ./mcp
     steps:
       - uses: actions/checkout@v3
       
@@ -29,6 +32,13 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          if [ -f requirements.txt ]; then
-            pip install -r requirements.txt
-          fi 
+          pip install -r ../requirements.txt
+
+      - name: Run tests
+        run: |
+          pytest tests/
+
+      - name: Run linting
+        run: |
+          flake8 .
+          black . --check 
