--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ gunicorn>=21.2.0
 pytest>=7.4.0
 black>=23.0.0
 flake8>=6.1.0
+mcp-protocol-sdk>=0.1.0
 # MCP SDK requirements will be added here
 pytest-mock>=3.11.0
 requests-mock>=1.12.1 
