--- a/.github/workflows/python-mcp.yml
+++ b/.github/workflows/python-mcp.yml
@@ -27,13 +27,16 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r ../requirements.txt
+          pip install -r requirements.txt
 
       - name: Run tests
+        env:
+          MCP_API_KEY: ${{ secrets.MCP_API_KEY }}
+          MCP_ENVIRONMENT: test
         run: |
-          pytest tests/
+          python -m pytest tests/ -v
 
       - name: Run linting
         run: |
-          flake8 .
-          black . --check 
+          python -m flake8 . --max-line-length=88 --extend-ignore=E203
+          python -m black . --check --quiet 
