Set up local MCP SDK dependency and update configuration

--- a/.github/workflows/python-mcp.yml
+++ b/.github/workflows/python-mcp.yml
@@ -17,6 +17,8 @@ jobs:
         working-directory: ./mcp
     steps:
       - uses: actions/checkout@v3
+        with:
+          submodules: 'recursive'
       
       - name: Set up Python
         uses: actions/setup-python@v4
