--- a/.github/workflows/python-mcp.yml
+++ b/.github/workflows/python-mcp.yml
@@ -30,6 +30,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
+          pip install -e vendor/mcp-protocol-sdk
 
       - name: Run tests
         env:
