--- a/.github/workflows/python-mcp.yml
+++ b/.github/workflows/python-mcp.yml
@@ -26,11 +26,21 @@ jobs:
           python-version: '3.10'
           cache: 'pip'
 
-      - name: Install dependencies
+      - name: Install build dependencies
         run: |
           python -m pip install --upgrade pip
+          pip install build hatchling uv-dynamic-versioning
+
+      - name: Build and install MCP SDK
+        run: |
+          cd vendor/mcp-protocol-sdk
+          python -m build
+          pip install dist/*.whl
+          cd ../..
+
+      - name: Install project dependencies
+        run: |
           pip install -r requirements.txt
-          pip install -e vendor/mcp-protocol-sdk
 
       - name: Run tests
         env:
