--- a/.github/workflows/python-mcp.yml
+++ b/.github/workflows/python-mcp.yml
@@ -19,6 +19,7 @@ jobs:
       - uses: actions/checkout@v3
         with:
           submodules: 'recursive'
+          token: ${{ secrets.GITHUB_TOKEN }}
       
       - name: Set up Python
         uses: actions/setup-python@v4
