--- a/mcp/requirements.txt
+++ b/mcp/requirements.txt
@@ -11,4 +11,5 @@ pydantic>=2.7.2,<3.0.0
 starlette>=0.27
 sse-starlette>=1.6.1
 pydantic-settings>=2.5.2
-uvicorn>=0.23.1 
+uvicorn>=0.23.1
+websockets>=15.0.1 
