--- a/.github/workflows/python-mcp.yml
+++ b/.github/workflows/python-mcp.yml
@@ -39,9 +39,9 @@ jobs:
           pip install dist/*.whl
           cd ../..
 
-      - name: Install project dependencies
+      - name: Install package in development mode
         run: |
-          pip install -r requirements.txt
+          pip install -e .
 
       - name: Run tests
         env:
