--- a/.github/workflows/python-mcp.yml
+++ b/.github/workflows/python-mcp.yml
@@ -24,18 +24,17 @@ jobs:
           python-version: '3.10'
           cache: 'pip'
 
-      - name: Install build dependencies
+      - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install build hatchling uv-dynamic-versioning
+          pip install -r requirements.txt
+          pip install build hatchling uv-dynamic-versioning pytest
 
       - name: Build and install MCP SDK
-        working-directory: ./mcp
+        working-directory: ./vendor/mcp-protocol-sdk
         run: |
-          cd vendor/mcp-protocol-sdk
           python -m build
           pip install dist/*.whl
-          cd ../..
 
       - name: Install package in development mode
         run: |
@@ -46,6 +45,7 @@ jobs:
         env:
           MCP_API_KEY: ${{ secrets.MCP_API_KEY }}
           MCP_ENVIRONMENT: test
+          PYTHONPATH: ${{ github.workspace }}/mcp
         run: |
           python -m pytest tests/ -v
 
